--- a/forum/src/main/resources/application.yml
+++ b/forum/src/main/resources/application.yml
@@ -1,8 +1,24 @@
 spring:
-  datasource:
-    url: jdbc:mysql://localhost/fj27_spring?createDatabaseIfNotExist=true&useSSL=false&useTimezone=true&serverTimezone=UTC
-    username: root
-    password: caelum
+#  datasource:
+#    url: jdbc:mysql://localhost/fj27_spring?createDatabaseIfNotExist=true&useSSL=false&useTimezone=true&serverTimezone=UTC
+#    username: root
+#    password: caelum
+    
   jpa:    hibernate:      ddl-auto: update
     properties:      hibernate:
-        dialect: org.hibernate.dialect.MySQL55Dialect   
+       # show_sql: true
+       # format_sql: true
+        dialect: org.hibernate.dialect.MySQL55Dialect
+        
+mysql:
+  user: ${MYSQL_USER:}
+  pass: ${MYSQL_PASS:}
+  url: ${MYSQL_URL:}
+  
+  
+#logging:
+#  level:#    org:
+#     hibernate:
+#      type: trace 
+
+   
